# voyant-sdk

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  automated_voyant_client_setup.py  license_header.txt  requirements.txt  ruff.toml  test.py  voyant_client_basic.py  voyant_lidar_client.py  voyant_lidar_client_setup.py  voyant_lidar_client_utilities.py
.github/: docker-build.yml
.github/workflows/: docker-build.yml  format.yml
config/: device_config.json  voyant_foxglove_cfg.json
cpp/examples/: CMakeLists.txt
cpp/examples/background_noise_calibration/: CMakeLists.txt  background_noise_calibration.cpp
cpp/examples/carbon_client_basic/: CMakeLists.txt  carbon_client_basic.cpp
cpp/examples/carbon_client_example/: CMakeLists.txt
cpp/examples/peak_dump/: CMakeLists.txt  peak_dump.cpp
cpp/examples/sdl_command/: CMakeLists.txt  sdl_command.cpp
cpp/examples/voyant_client_basic/: voyant_client_basic.cpp
cpp/examples/voyant_playback_basic/: playback_options.hpp  voyant_playback_basic.cpp
cpp/examples/voyant_recorder_basic/: CMakeLists.txt  voyant_recorder_basic.cpp
docker/: Dockerfile
docs/: README.md  _config.yml  index.md
docs/api/: README.md
docs/api/doxygen/: annotated.html  capnp__wrapper_8h.html  capnp__wrapper_8h_source.html  classCapnpWrapper-members.html  classCapnpWrapper.html  classDataBlockWrapper-members.html  classDataBlockWrapper.html  classDataBlock_1_1Builder-members.html  classDataBlock_1_1Builder.html  classDataBlock_1_1Pipeline-members.html  classDataBlock_1_1Pipeline.html  classDataBlock_1_1Reader-members.html  classDataBlock_1_1Reader.html  classPointDataWrapper-members.html  classPointDataWrapper.html  classPointData_1_1Builder-members.html  classPointData_1_1Builder.html  classPointData_1_1Pipeline-members.html  classPointData_1_1Pipeline.html  classPointData_1_1Reader-members.html  classPointData_1_1Reader.html  classPointGroupHeaderWrapper-members.html  classPointGroupHeaderWrapper.html  classPointGroupHeader_1_1Builder-members.html  classPointGroupHeader_1_1Builder.html  classPointGroupHeader_1_1Pipeline-members.html  classPointGroupHeader_1_1Pipeline.html  classPointGroupHeader_1_1Reader-members.html  classPointGroupHeader_1_1Reader.html  classPointGroupWrapper-members.html  classPointGroupWrapper.html  classPointGroup_1_1Builder-members.html  classPointGroup_1_1Builder.html  classPointGroup_1_1Pipeline-members.html  classPointGroup_1_1Pipeline.html  classPointGroup_1_1Reader-members.html  classPointGroup_1_1Reader.html  classTimestamp_1_1Builder-members.html  classTimestamp_1_1Builder.html  classTimestamp_1_1Pipeline-members.html  (+184 more)
docs/api/doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  (+51 more)
docs/getting-started/: README.md  connections.md  installation.md  quickstart.md
docs/tools/: README.md
examples/: CMakeLists.txt  voyant_client_basic.cpp
examples/voyant_client_basic/: CMakeLists.txt  voyant_client_basic.cpp
examples/voyant_playback_basic/: CMakeLists.txt  playback_options.hpp  voyant_playback_basic.cpp
python/examples/: background_noise_calibration_example.py  client_example.py  pcd_conversion_example.py  peak_dump_example.py  playback_example.py  recorder_example.py  sdl_command.py
setup_client_configs/: MK001.json  last_config.txt  voyant_client_setup_config.json
